Fix alert animation on IE11

--- a/web/pgadmin/static/scss/_alert.scss
+++ b/web/pgadmin/static/scss/_alert.scss
@@ -91,6 +91,7 @@ category: alerts
 
 .alert-row {
   display: block;
+  width: auto;
 }
 
 .alert-box {
